--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   db:
@@ -11,7 +10,7 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-plex_wishlist_user}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-plex_wishlist_user} -d ${POSTGRES_DB:-plex_wishlist}"]
       interval: 10s
       timeout: 5s
       retries: 5
