Add Deluge torrent management module with VPN integration

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,15 @@ LOG_LEVEL=INFO
 POSTGRES_USER=plex_wishlist_user
 POSTGRES_PASSWORD=plex_wishlist_pass
 POSTGRES_DB=plex_wishlist
+
+                               
+# NordVPN Credentials
+NORDVPN_USER=yourUser
+NORDVPN_PASSWORD=YourPassword
+SERVER_REGIONS=Spain,France
+
+#deluge
+DELUGE_HOST=gluetun
+DELUGE_PORT=58846
+DELUGE_USERNAME=deluge
+DELUGE_PASSWORD=deluge
