--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,21 @@ sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 alembic==1.12.1
 httpx==0.25.1
+requests==2.31.0
 python-dotenv==1.0.0
 pydantic-settings==2.1.0
 apscheduler==3.10.4
 
-# Deluge client
-deluge-client==1.10.2
+# Deluge client (Web API client for Deluge 2.x support)
+deluge-web-client>=1.0.0
+
+# Bencode parser for torrent files
+bencode.py==4.0.0
+
+# Scanner dependencies
+pyclamd==0.4.0
+yara-python==4.5.0
+aiofiles==23.2.1
 
 # Testing
 pytest==7.4.3
