Replace deluge-web-client with deluge-client - Updated requirements and refactored DelugeService to use DelugeRPCClient

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,8 @@ DELUGE_HOST=gluetun
 DELUGE_PORT=58846
 DELUGE_USERNAME=deluge
 DELUGE_PASSWORD=deluge
+
+#prowlarr
+PROWLARR_API_KEY=your_key_here
+PROWLARR_USER=TEST
+PROWLARR_PASSWORD=TEST
