--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ python_classes = Test*
 python_functions = test_*
 asyncio_mode = auto
 addopts = -v --tb=short
+norecursedirs = integration
 filterwarnings =
     ignore::DeprecationWarning
     ignore::UserWarning
