--- a/infra/deluge/config/core.conf
+++ b/infra/deluge/config/core.conf
@@ -13,7 +13,7 @@
     "del_copy_torrent_file": false,
     "dht": true,
     "dont_count_slow_torrents": false,
-    "download_location": "/downloads/downloading",
+    "download_location": "/downloads/quarantine",
     "download_location_paths_list": [],
     "enabled_plugins": [
         "Execute"
@@ -46,7 +46,7 @@
     "max_upload_slots_per_torrent": -1,
     "max_upload_speed": -1.0,
     "max_upload_speed_per_torrent": -1,
-    "move_completed": true,
+    "move_completed": false,
     "move_completed_path": "/downloads/quarantine",
     "move_completed_paths_list": [],
     "natpmp": true,
