Update .env.example with new configuration variables

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 DATABASE_URL=postgresql://plex_wishlist_user:plex_wishlist_pass@db:5432/plex_wishlist
 
 # API Security
-API_KEY=your-secret-api-key-change-this
+API_KEY=test
 
 # Sync Configuration
 PLEX_SYNC_INTERVAL_HOURS=6
@@ -15,19 +15,32 @@ POSTGRES_USER=plex_wishlist_user
 POSTGRES_PASSWORD=plex_wishlist_pass
 POSTGRES_DB=plex_wishlist
 
-                               
+
 # NordVPN Credentials
 NORDVPN_USER=yourUser
-NORDVPN_PASSWORD=YourPassword
+NORDVPN_PASSWORD=yourPass
 SERVER_REGIONS=Spain,France
 
 #deluge
-DELUGE_HOST=gluetun
-DELUGE_PORT=58846
-DELUGE_USERNAME=deluge
-DELUGE_PASSWORD=deluge
+DELUGE_HOST = gluetun
+DELUGE_PORT = 58846
+DELUGE_USERNAME = deluge
+DELUGE_PASSWORD = deluge
+CONTAINER_DELUGE_QUARANTINE_PATH = /downloads/quarantine
+
 
 #prowlarr
-PROWLARR_API_KEY=your_key_here
+PROWLARR_HOST=gluetun
+PROWLARR_PORT= 9696
+PROWLARR_API_KEY=yourProwlarrApi
 PROWLARR_USER=TEST
-PROWLARR_PASSWORD=TEST
+PROWLARR_PASSWORD=test
+
+#plexServer
+PLEX_SERVER_URL= http://plex:32400 
+CONTAINER_PLEX_MEDIA_PATH = /plex/media
+
+#fastapi
+SCANFORVIRUS_API_URL = http://fastapi:8000/antivirus/scan/torrent
+#tmdb
+TMDB_API_KEY=yourTmdbApi
