chore: update docker-compose and env example configuration

--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ POSTGRES_DB=plex_wishlist
 # NordVPN Credentials
 NORDVPN_USER=yourUser
 NORDVPN_PASSWORD=yourPass
-SERVER_REGIONS=Spain,France
+SERVER_COUNTRIES=Switzerland,Spain
 
 #deluge
 DELUGE_HOST = gluetun
