--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,13 +76,11 @@ services:
     environment:
       - VPN_SERVICE_PROVIDER=nordvpn
       - VPN_TYPE=openvpn
-      - NORDVPN_USER=${NORDVPN_USER}
-      - NORDVPN_PASSWORD=${NORDVPN_PASSWORD}
       - OPENVPN_USER=${NORDVPN_USER}
       - OPENVPN_PASSWORD=${NORDVPN_PASSWORD}
       - HEALTH_SERVER_AUTH=no
       - HEALTH_SERVER_PORT=9999
-      - SERVER_REGIONS=${SERVER_REGIONS:-}
+      - SERVER_COUNTRIES=${SERVER_COUNTRIES}
       - FIREWALL=on
       - FIREWALL_INPUT_PORTS=8112,58846,${PROWLARR_PORT},8191
       - FIREWALL_OUTBOUND_SUBNETS=192.168.0.0/16,172.16.0.0/12,172.18.0.0/16
